results/SVCOMP/specgen/log-URLDecoder02-2024_03_07_17_43_55.txt
public class URLDecoder02 {

  //@ requires arg != null;
  //@ ensures \result == true || \result == false;
  public static boolean f(String arg) {

    String s1 = Verifier.nondetString() + "some-url";

    try {
      String s2 = java.net.URLDecoder.decode(s1, "UTF-8");
      if (!s2.startsWith("some")) {
        return false;
      }
    } catch (java.io.UnsupportedEncodingException e) {
    }
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/URLDecoder02.java:7: error: cannot find symbol
    String s1 = Verifier.nondetString() + "some-url";
                ^
  symbol:   variable Verifier
  location: class URLDecoder02
1 error

public class URLDecoder02 {

  //@ requires arg != null;
  //@ ensures \result == true || \result == false;
  public static boolean f(String arg) {

    String s1 = "some-random-string" + "some-url";

    try {
      String s2 = java.net.URLDecoder.decode(s1, "UTF-8");
      if (!s2.startsWith("some")) {
        return false;
      }
    } catch (java.io.UnsupportedEncodingException e) {
    }
    return true;
  }
}

